注册页面练习

--- a/10-注册页面 练习.html
+++ b/10-注册页面 练习.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h4>青春不常在，抓紧谈恋爱</h4>
-    <table width="600" border="0">
+    <table width="600" border="1" cellspacing="0">
         <!-- 第一行 -->
         <tr>
             <td>性别：</td>
