注册页面练习

--- a/10-注册页面 练习.html
+++ b/10-注册页面 练习.html
@@ -7,7 +7,7 @@
     <title>综合练习-注册页面</title>
 </head>
 <body>
-    <h4>恋爱网站注册信息填写</h4>
+    <h4>网站注册信息填写</h4>
     <table width="600" border="1" cellspacing="0">
         <!-- 第一行 -->
         <tr>
