--- a/10-注册页面 练习.html
+++ b/10-注册页面 练习.html
@@ -59,7 +59,7 @@
         <tr>
             <td>婚姻状况：</td>
             <td>
-                <input type="radio" name="unmarried" checked="checked">未婚 <input type="radio" name="married">已婚 <input type="radio" name="divoced">离婚
+                <input type="radio" value="unmarried" name="isM" checked="checked">未婚 <input type="radio" value="married" name="isM">已婚 <input type="radio" name="divoced">离婚
             </td>
         </tr>
         <!-- 第五行 -->
