--- a/HTML 练习/05-段落和换行标签.html
+++ b/HTML 练习/05-段落和换行标签.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>段落标签和换行标签</title>
 </head>
 <body>
     <p>你我看待事物的方式不同，价值取向也不同，因为我们有着不同的世界观，价值观。<br/>这种世界观的差异不仅仅体现在实际的生活中，也反映在代码上。你我看待代码的方式，或者说是代码在我们情感层面的位置是不一样的，我这里说的是情感层面，与逻辑无关，与算法无关（虽然算法受情感影响）。</p>
