--- a/HTML 练习/06-课堂练习.html
+++ b/HTML 练习/06-课堂练习.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML标签课堂练习</title>
 </head>
 <body>
     <h1>我不清楚他人是如何看待CSS的，CSS的这些属性在他们心中是个什么东西，</h1>
