--- a/css 练习/32-显示模式之行内块元素（特殊情况）.html
+++ b/css 练习/32-显示模式之行内块元素（特殊情况）.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>外部样式表</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>显示模式之行内块元素（特殊情况）</title>
+    <style>
+      input {
+        width: 250px;
+        height: 30px;
+      }
+    </style>
   </head>
   <body>
-    <div>只要学不死 就往死里学···</div>
+    <input type="text" />
+    <input type="text" />
   </body>
 </html>
