--- a/css 练习/35-单行文字垂直居中.html
+++ b/css 练习/35-单行文字垂直居中.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>外部样式表</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>单行文字垂直居中</title>
+    <style>
+      div {
+        width: 200px;
+        height: 40px;
+        background-color: pink;
+        line-height: 40px;
+      }
+    </style>
   </head>
   <body>
-    <div>只要学不死 就往死里学···</div>
+    <div>我要居中</div>
   </body>
 </html>
