--- a/css 练习/17-css文本外观之行间距.html
+++ b/css 练习/17-css文本外观之行间距.html
@@ -18,11 +18,12 @@
     <div>文字记录</div>
     <p>
       唯有每次坐高铁的时候，看着窗外的景物渐行渐远，才明白苏轼那句：人生如逆旅，我亦是行人。但愿初想见，不负有心人。
-    </p>
-    <p>
       唯有每次坐高铁的时候，看着窗外的景物渐行渐远，才明白苏轼那句：人生如逆旅，我亦是行人。但愿初想见，不负有心人。
-    </p>
-    <p>
+      唯有每次坐高铁的时候，看着窗外的景物渐行渐远，才明白苏轼那句：人生如逆旅，我亦是行人。但愿初想见，不负有心人。
+      唯有每次坐高铁的时候，看着窗外的景物渐行渐远，才明白苏轼那句：人生如逆旅，我亦是行人。但愿初想见，不负有心人。
+      唯有每次坐高铁的时候，看着窗外的景物渐行渐远，才明白苏轼那句：人生如逆旅，我亦是行人。但愿初想见，不负有心人。
+      唯有每次坐高铁的时候，看着窗外的景物渐行渐远，才明白苏轼那句：人生如逆旅，我亦是行人。但愿初想见，不负有心人。
+      唯有每次坐高铁的时候，看着窗外的景物渐行渐远，才明白苏轼那句：人生如逆旅，我亦是行人。但愿初想见，不负有心人。
       唯有每次坐高铁的时候，看着窗外的景物渐行渐远，才明白苏轼那句：人生如逆旅，我亦是行人。但愿初想见，不负有心人。
     </p>
   </body>
