--- a/css 练习/21-css综合案例练习-新闻页面.html
+++ b/css 练习/21-css综合案例练习-新闻页面.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -69,17 +69,17 @@
 <h4>三、未来三天具体预报</h4>
 <p>3月2日08时至3日08时，黑龙江东南部、吉林东部、新疆西北部等地部分地区有小到中雪或雨夹雪，其中，黑龙江东南部、新疆北疆北部等地部分地区有大雪（5～9毫米）。贵州北部、湖南西北部等地部分地区有小雨。内蒙古中北部、辽宁中部、西藏北部等地部分地区有4～6级风（见图1）。</p>
 <p class="pic">
-  <img src="images/天气图1.jpg" alt="">
+  <img src="./images/天气图1.jpg" alt="">
 </p>
 <p class="shuoming">图1 全国降水量预报图（3月2日08时-3日08时）</p>
 <p>3月3日08时至4日08时，内蒙古东北部、黑龙江西北部、新疆沿天山地区等地部分地区有小到中雪（2.5～3毫米）。江淮大部、江汉东部、江南大部、西南地区东南部、广西东北部等地部分地区有小到中雨，其中，江西北部、浙江中部等地部分地区有大雨（25～35毫米）。内蒙古、辽宁、新疆东部、陕西北部、山西中部、河北北部、山东半岛等地部分地区有4～6级风，其中，内蒙古西北部部分地区有6～7级风（见图2）。</p>
 <p class="pic">
-  <img src="images/天气图2.jpg" alt="">
+  <img src="./images/天气图2.jpg" alt="">
 </p>
 <p class="shuoming">图2 全国降水量预报图（3月3日08时-4日08时）</p>
 <p>3月4日08时至5日08时，内蒙古东北部、东北地区中北部、西藏东部、青海西部等地部分地区有小到中雪，其中，黑龙江东北部等地部分地区有大到暴雪（10～13毫米）。江南大部、贵州大部、广西中北部等地部分地区有小到中雨，其中，湖南中部等地部分地区有大雨。内蒙古中东部、东北地区中南部、河北北部等地部分地区有4～6级风，其中，内蒙古东部部分地区有6～7级风（见图3）。</p>
 <p class="pic">
-  <img src="images/天气图3.jpg" alt="">
+  <img src="./images/天气图3.jpg" alt="">
 </p>
 
 <p class="shuoming">图3 全国降水量预报图（3月4日08时-5日08时）</p>
