--- a/css 练习/29-css伪类选择器之focus伪类选择器.html
+++ b/css 练习/29-css伪类选择器之focus伪类选择器.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>id选择器</title>
+    <title>css伪类选择器之focus伪类选择器</title>
     <style>
-      /* id 选择器口诀：样式#定义，结构id调用，只能调用一次，别人切勿使用。 */
-      #pink {
-        color: pink;
+      /* 把获得光标的input表单元素选取出来 */
+      input:focus {
+        background-color: brown;
+        color: blue;
       }
     </style>
   </head>
   <body>
-    <div id="pink">迈克尔·杰克逊</div>
-    <div id="pink">342342</div>
+    <input type="text" />
+    <input type="text" />
+    <input type="text" />
   </body>
 </html>
