--- a/css 练习/30-显示模式之块级元素.html
+++ b/css 练习/30-显示模式之块级元素.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>外部样式表</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>显示模式之块级元素</title>
+    <style>
+      div {
+        width: 200px;
+        height: 200px;
+        background-color: red;
+      }
+    </style>
   </head>
   <body>
-    <div>只要学不死 就往死里学···</div>
+    <div>比较霸道，独占一行</div>
+    瑟瑟发抖
   </body>
 </html>
