--- a/css 练习/36-背景颜色.html
+++ b/css 练习/36-背景颜色.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>外部样式表</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>背景颜色</title>
+    <style>
+      div {
+        width: 200px;
+        height: 200px;
+        background-color: pink;
+        /* background-color: transparent; 透明的 */
+      }
+    </style>
   </head>
   <body>
-    <div>只要学不死 就往死里学···</div>
+    <div></div>
   </body>
 </html>
