--- a/css 练习/22-css-emeet语法使用.html
+++ b/css 练习/22-css-emeet语法使用.html
@@ -25,7 +25,8 @@
     <!-- .nav -->
     <div class="nav"></div>
     <div id="banner"></div>
-    <!-- #one -->
+    <!-- #abc -->
+    <div id="abc"></div>
     <p class="one"></p>
     <span class="gray"></span>
     <ul>
