--- a/css 练习/3-基础选择器之类选择器.html
+++ b/css 练习/3-基础选择器之类选择器.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>基础选择器之类选择器</title>
     <style>
-      /* 类选择器口诀：样式点定义  结构类（class）调用  一个或多个；开发最常用 */
+      /* 类选择器口诀：样式点·定义  结构类（class）调用  一个或多个；开发最常用 */
       .red {
         color: red;
       }
