--- a/css 练习/网页练习/index.html
+++ b/css 练习/网页练习/index.html
@@ -25,7 +25,7 @@
         <button></button>
       </div>
       <div class="user">
-        <img src="./img/user.png" alt="" />
+        <img src="./img/user.png" alt="" style="vertical-align: middle;"/>
         qq-lilei
       </div>
     </div>
