--- a/javascipt 练习/79-函数封装-求1~100的和.html
+++ b/javascipt 练习/79-函数封装-求1~100的和.html
@@ -5,7 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script></script>
+    <script>
+      // 1.声明函数
+      function getSum() {
+        var sum = 0;
+        for (var i = 1; 1 <= 100; i++) {
+          sunm += i;
+        }
+        console.log(sum);
+      }
+      // 2.调用函数
+      getSum();
+    </script>
   </head>
   <body></body>
 </html>
