--- a/javascipt 练习/27-后置自增运算符.html
+++ b/javascipt 练习/27-后置自增运算符.html
@@ -8,7 +8,7 @@
     <script>
       var num = 10;
       num++; //num = num + 1     =++num
-      console.log(num);
+      console.log(num); //11
       // 1.前置自增和后置自增如果单独使用效果是一样的
       // 2.后置自增口诀：先返回原值，后自加1
       var age = 10;
