--- a/javascipt 练习/43-switch注意事项.html
+++ b/javascipt 练习/43-switch注意事项.html
@@ -13,7 +13,7 @@
           break;
         case 3:
           console.log(3);
-          brake;
+          break;
         default:
       }
       // 1.开发里面，表达式经常写成变量
