--- a/javascipt 练习/50-for 循环重复某些相同的操作.html
+++ b/javascipt 练习/50-for 循环重复某些相同的操作.html
@@ -14,7 +14,7 @@
       for (var i = 1; i <= 100; i++) {
         sum = sum + i; //还可以简写成 sum += i
       }
-      console.log(sum);
+      console.log(sum); //5050
     </script>
   </head>
   <body></body>
