--- a/javascipt 练习/51-for循环练习题.html
+++ b/javascipt 练习/51-for循环练习题.html
@@ -13,7 +13,7 @@
         sum += i;
       }
       average = sum / 100;
-      console.log(average);
+      console.log(average); //50.5
 
       // 2.求1~100之间所有偶数和奇数的和  需要一个偶数的和变量even 还需要一个奇数odd
       var even = 0;
@@ -25,8 +25,8 @@
           odd += i;
         }
       }
-      console.log("1~100之间的偶数和是" + even);
-      console.log("1~100之间的奇数和是" + odd);
+      console.log("1~100之间的偶数和是" + even); //1~100之间的偶数和是2550
+      console.log("1~100之间的奇数和是" + odd); //1~100之间的奇数和是2500
 
       // 3.求1~100之间所有能被3整除的数字的和
       var result = 0;
@@ -35,7 +35,7 @@
           result += i;
         }
       }
-      console.log("1~100之间能够被3整除的数字的和是" + result);
+      console.log("1~100之间能够被3整除的数字的和是" + result); //1~100之间能够被3整除的数字的和是1683
     </script>
   </head>
   <body></body>
