--- a/javascipt 练习/54-双重for循环.html
+++ b/javascipt 练习/54-双重for循环.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <script>
       // 双重for循环 语法结构
-      // for (外层的初识变化量; 外层的条件表达式; 外层的操作表达式) {
-      //   for (里层的初识变化量; 里层的条件表达式; 里层的操作表达式) {
+      // for (外层的初始变化量; 外层的条件表达式; 外层的操作表达式) {
+      //   for (里层的初始变化量; 里层的条件表达式; 里层的操作表达式) {
       //     执行语句;
       //   }
       // }
