--- a/javascipt 练习/57-打印倒三角形.html
+++ b/javascipt 练习/57-打印倒三角形.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script>
-      // 1.一共有十行，但是每行星星个数不一样，隐藏用到双重for循环
+      // 1.一共有十行，但是每行星星个数不一样，用到双重for循环
       // 2.外层for控制行数i，循环10次可以打印10行
       // 3.内存的for控制每行的星星个数j
       // 4.核心算法：里层循环：j=i；j<=10；j++
