--- a/javascipt 练习/73-筛选数组练习.html
+++ b/javascipt 练习/73-筛选数组练习.html
@@ -26,7 +26,7 @@
 
       // 方法2
       var arr = [2, 0, 6, 1, 77, 0, 52, 0, 25, 7];
-      var newarr = [];
+      var newArr = [];
       // 刚开始 newarr.length;就是0
       for (var i = 0; i < arr.length; i++) {
         if (arr[i] >= 10) {
