--- a/javascipt 练习/99-预解析.html
+++ b/javascipt 练习/99-预解析.html
@@ -9,7 +9,7 @@
       // js引擎运行js分为两步：预解析、执行代码
 
       // 一：
-      console.log(num);
+      console.log(num); // umdefined
 
       // 二：
       console.log(num); //undefined
